# The-Word

./: .gitignore  Makefile  README.md  meson.build
.idx/: dev.nix
Include/: files.hpp
res/: dico.txt
src/: files.cpp  main.cpp
subprojects/: ZipLib.wrap  bzip2.wrap  plzmaSDK.wrap
